--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1.0.140"
 serde_derive = "1.0.219"
 quick-xml = { version = "0.37.5" , features = ["serde"]}
 
+scc = "2.3.4"
+
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
 
