--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ log = "0.4.27"
 
 rocket = "0.5.1"
 tokio = "1.45.1"
-reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"]}
+reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "stream"]}
+futures = "0.3.31"
+tokio-util = { version = "0.7.15", features = ["compat"]}
 
 serde = "1.0.219"
 serde_json = "1.0.140"
