--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ anyhow = "1.0.98"
 
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-log = "0.4.27"
 
 rocket = "0.5.1"
 tokio = "1.45.1"
@@ -20,7 +19,7 @@ tokio-util = { version = "0.7.15", features = ["compat"]}
 serde = "1.0.219"
 serde_json = "1.0.140"
 serde_derive = "1.0.219"
-quick-xml = { version = "0.37.5" , features = ["serde"]}
+#quick-xml = { version = "0.37.5" , features = ["serde"]}
 
 scc = "2.3.4"
 
