--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,11 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 serde_derive = "1.0.219"
 #quick-xml = { version = "0.37.5" , features = ["serde"]}
+base64 = "0.22.1"
 
 scc = "2.3.4"
+
+bcrypt = "0.17.0"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
