--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "maven-repo"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/C0D3-M4513R/maven-repo"
 
 [dependencies]
 dotenvy = "0.15.7"
