--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ md-5 = "0.10.6"
 sha1-checked = "0.10.0"
 sha2 = "0.10.9"
 sha3 = "0.10.8"
+blake3 = "1.8.2"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
