--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/C0D3-M4513R/maven-repo"
 [dependencies]
 dotenvy = "0.15.7"
 anyhow = "1.0.98"
+const_format = "0.2.34"
 
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
