--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = "1.0.140"
 serde_derive = "1.0.219"
 quick-xml = { version = "0.38.0" , features = ["serialize"]}
 base64 = "0.22.1"
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 memmap2 = "0.9.5"
 
 bcrypt = "0.17.0"
